Separate  linear-regression and logistic-regression. Obtain softmax function and start MLE.

--- a/linear-regression.ipynb
+++ b/linear-regression.ipynb
@@ -317,7 +317,7 @@
    "source": [
     "## General Regression Model\n",
     "- Inherit most methods from a base model.\n",
-    "- Applicable to univariate and multivariate linear regression, polynomial regression, logistic regression. (maybe L1 and L2 regression too.)"
+    "- Applicable to univariate and multivariate linear regression."
    ]
   },
   {
