likelihood and log-likelihood functions. Beginning of optimization theory.

--- a/logistic-regression.ipynb
+++ b/logistic-regression.ipynb
@@ -275,10 +275,10 @@
     "\n",
     "#### Assumptions\n",
     "- $N$ **independent** observations $\\{(\\vec{x}_n, y_n)\\}_{n=1}^{N}$.\n",
-    "- Each $y_n\\in \\{1,...,k,...,K\\}\\,\\forall n=1,...,N$, i.e. there is only one category assigned to each observation.\n",
+    "- Each $y_n\\in \\{1,...,k,...,K\\}\\,\\forall n=1,...,N$, i.e. there is only one category assigned to each observation and every class is **independent** from each other.\n",
     "- Each $\\vec{x}_n\\in\\mathbb{R}^M \\,\\forall n=1,...,N$, i.e. there are $M$ variables for each observation.\n",
     "\n",
-    "#### Likelihood Function\n",
+    "#### Likelihood and Log-Likelihood Functions\n",
     "By definition, the likelihood is the probability of the observed data to exist:\n",
     "\n",
     "$$ L(B) = P(\\vec{y}|X;B) = P(y_1,...,y_N|\\vec{x}_1,...,\\vec{x}_N; \\vec{\\beta}_1,..., \\vec{\\beta}_K), $$\n",
@@ -286,7 +286,73 @@
     "where we introduced:\n",
     "- $\\vec{y}\\in\\mathbb{R}^N$: to indicate the categories for every observation.\n",
     "- $X\\in\\mathbb{R}^{N\\times M}$: to indicate the matrix that has the values of each observation as its rows and of every variable as its columns.\n",
-    "- $B\\in\\mathbb{R}^{C\\times M}$: to indicate the matrix that has the coefficients for each category as is rows and the coefficients for each variable as its columns."
+    "- $B\\in\\mathbb{R}^{C\\times M}$: to indicate the matrix that has the coefficients for each category as is rows and the coefficients for each variable as its columns.\n",
+    "\n",
+    "Because it is assumed that the observations are independent:\n",
+    "$$ L(B) = \\prod_{n=1}^{N} P(y_n|\\vec{x}_n;B), $$\n",
+    "\n",
+    "and due to independence between classes:\n",
+    "$$ P(y_n|\\vec{x}_n;B) \n",
+    "= \n",
+    "    \\prod_{k=1}^K P(y_n|\\vec{x}_n;\\vec{\\beta}_k)^{\\delta(k,y_n)}\n",
+    "=\n",
+    "    \\prod_{k=1}^K \\pi_k(\\vec{x}_n)^{\\delta(k,y_n)}.$$\n",
+    "\n",
+    "This means that the likelihood of an observation is the predicted probability of the correct class — cannot observe it otherwise. Putting all back together:\n",
+    "$$ L(B) = \\prod_{n=1}^N\\prod_{k=1}^K \\pi_k(\\vec{x}_n)^{\\delta(k, y_k)}. $$\n",
+    "\n",
+    "But taking logarithms the expression becomes much simpler to derivate (log-likelihood):\n",
+    "\\begin{equation}\n",
+    "    l(B)\\equiv \\log L(B) = \\sum_{n=1}^N \\sum_{k=1}^K\n",
+    "        \\delta(k, y_k) \\log\\left( \\pi_k(\\vec{x}_n) \\right).\n",
+    "\\tag{3}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30f5202c",
+   "metadata": {},
+   "source": [
+    "#### Optimization of the Log-Likelihood Function\n",
+    "The last step is to take derivatives from equation (3) on the coefficients. As $B\\in\\mathbb{R}^{C\\times M}$, then two coefficients are needed, $\\partial\\beta_{cl}\\equiv \\partial/\\partial\\beta_{cl}$, where $\\beta_{cl}$ is the coefficient corresponding to the class $c$ and the variable $l$. Mathematically, we have to solve:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "&0 = \\frac{\\partial l(B)}{\\partial \\beta_{cl}}\n",
+    "=\n",
+    "\\sum_{n=1}^N\\sum_{k=1}^K \\delta(k, y_n) \n",
+    "    \\frac{\\partial}{\\partial \\beta_{cl}} \\left[ \\log(\\pi_k(\\vec{x}_n)) \\right] \\\\\n",
+    "\\Leftrightarrow\\,\n",
+    "&0 = \\sum_{n=1}^N \\left[ \n",
+    "        \\delta(K, y_n) \\frac{\\partial}{\\partial \\beta_{cl}} \\left[ \\log\\pi_K(\\vec{x}_n) \\right] \n",
+    "        + \n",
+    "        \\sum_{k=1}^{K-1} \\delta(k, y_n) \\frac{\\partial}{\\partial \\beta_{cl}} \\left[ \\log\\pi_k(\\vec{x}_n) \\right]\n",
+    "    \\right].\n",
+    "\\end{align*}\n",
+    "\n",
+    "Let's solve the two derivatives separately. The first term corresponds to the reference class $K$:\n",
+    "$$ \n",
+    "I\n",
+    "\\equiv\n",
+    "\\frac{\\partial}{\\partial \\beta_{cl}} \\left[ \\log\\pi_K(\\vec{x}_n) \\right] \n",
+    "=\n",
+    "\\frac{\\partial}{\\partial \\beta_{cl}} \\left[ \\log\\frac{1}{Z} \\right] \n",
+    "=\n",
+    "- \\frac{\\partial}{\\partial \\beta_{cl}} \\left[ \\log Z \\right] \n",
+    "=\n",
+    "\\frac{-1}{Z} \\frac{\\partial Z}{\\partial \\beta_{cl}}.\n",
+    "$$\n",
+    "\n",
+    "The second term is of the rest of the classes, but can be related to the previous derivative:\n",
+    "$$\n",
+    "II\n",
+    "\\equiv\n",
+    "\\frac{\\partial}{\\partial \\beta_{cl}} \\left[ \\log\\pi_k(\\vec{x}_n) \\right]\n",
+    "=\n",
+    "\\frac{\\partial}{\\partial \\beta_{cl}} \\left[ \\log \\frac{\\exp(\\vec{x}_n\\cdot\\vec{\\beta}_k)}{Z} \\right]\n",
+    "=\n",
+    "\\frac{\\partial}{\\partial \\beta_{cl}} \\left[ \\vec{x}_n\\cdot\\vec{\\beta}_k \\right] + I.\n",
+    "$$"
    ]
   },
   {
