Optimization of the Log-Likelihood Function

--- a/logistic-regression.ipynb
+++ b/logistic-regression.ipynb
@@ -318,16 +318,19 @@
     "The last step is to take derivatives from equation (3) on the coefficients. As $B\\in\\mathbb{R}^{C\\times M}$, then two coefficients are needed, $\\partial\\beta_{cl}\\equiv \\partial/\\partial\\beta_{cl}$, where $\\beta_{cl}$ is the coefficient corresponding to the class $c$ and the variable $l$. Mathematically, we have to solve:\n",
     "\n",
     "\\begin{align*}\n",
-    "&0 = \\frac{\\partial l(B)}{\\partial \\beta_{cl}}\n",
+    "&\\frac{\\partial l(B)}{\\partial \\beta_{cl}}\n",
     "=\n",
     "\\sum_{n=1}^N\\sum_{k=1}^K \\delta(k, y_n) \n",
     "    \\frac{\\partial}{\\partial \\beta_{cl}} \\left[ \\log(\\pi_k(\\vec{x}_n)) \\right] \\\\\n",
     "\\Leftrightarrow\\,\n",
-    "&0 = \\sum_{n=1}^N \\left[ \n",
+    "&\\frac{\\partial l(B)}{\\partial \\beta_{cl}}\n",
+    "= \n",
+    "\\sum_{n=1}^N \\left[ \n",
     "        \\delta(K, y_n) \\frac{\\partial}{\\partial \\beta_{cl}} \\left[ \\log\\pi_K(\\vec{x}_n) \\right] \n",
     "        + \n",
     "        \\sum_{k=1}^{K-1} \\delta(k, y_n) \\frac{\\partial}{\\partial \\beta_{cl}} \\left[ \\log\\pi_k(\\vec{x}_n) \\right]\n",
     "    \\right].\n",
+    "    \\tag{4}\n",
     "\\end{align*}\n",
     "\n",
     "Let's solve the two derivatives separately. The first term corresponds to the reference class $K$:\n",
@@ -352,7 +355,121 @@
     "\\frac{\\partial}{\\partial \\beta_{cl}} \\left[ \\log \\frac{\\exp(\\vec{x}_n\\cdot\\vec{\\beta}_k)}{Z} \\right]\n",
     "=\n",
     "\\frac{\\partial}{\\partial \\beta_{cl}} \\left[ \\vec{x}_n\\cdot\\vec{\\beta}_k \\right] + I.\n",
-    "$$"
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e1a8e28",
+   "metadata": {},
+   "source": [
+    "\n",
+    "To solve $I$ and $II$, let's focus on the derivative of $Z$:\n",
+    "$$\n",
+    "\\frac{\\partial Z}{\\partial \\beta_{cl}}\n",
+    "= \n",
+    "\\frac{\\partial}{\\partial\\beta_{cl}}\\left[ 1 + \\sum_{k=1}^{K-1} {\\rm e}^{\\vec{x}_n\\cdot\\vec{\\beta}_k} \\right]\n",
+    "=\n",
+    "\\sum_{k=1}^{K-1} {\\rm e}^{\\vec{x}_n\\cdot\\vec{\\beta}_k} \\frac{\\partial}{\\partial\\beta_{cl}}\\left[ \\vec{x}_n\\cdot\\vec{\\beta}_k \\right],\n",
+    "$$\n",
+    "\n",
+    "where the last term can be expanded by the definition of the dot product:\n",
+    "$$\n",
+    "\\frac{\\partial}{\\partial\\beta_{cl}}\\left[ \\vec{x}_n\\cdot\\vec{\\beta}_k \\right]\n",
+    "=\n",
+    "\\frac{\\partial}{\\partial\\beta_{cl}}\\left[ \\sum_{m=1}^M x_{nm}\\beta_{km} \\right]\n",
+    "=\n",
+    "\\sum_{m=1}^M x_{nm}\\delta_{ck}\\delta_{ml},\n",
+    "$$\n",
+    "\n",
+    "leading to:\n",
+    "$$\n",
+    "\\frac{\\partial Z}{\\partial \\beta_{cl}}\n",
+    "=\n",
+    "\\sum_{k=1}^{K-1} {\\rm e}^{\\vec{x}_n\\cdot\\vec{\\beta}_k} \\sum_{m=1}^M x_{nm}\\delta_{ck}\\delta_{ml}\n",
+    "=\n",
+    "x_{nl} {\\rm e}^{\\vec{x}_n\\cdot\\vec{\\beta}_c}.\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf3f8ee1",
+   "metadata": {},
+   "source": [
+    "Consequently:\n",
+    "\\begin{align*}\n",
+    "    &\\rightarrow\\, I \n",
+    "        = \n",
+    "        \\frac{-1}{Z}\\frac{\\partial Z}{\\partial \\beta_{cl}} \n",
+    "        = \n",
+    "        -\\frac{\\exp(\\vec{x}_n\\cdot\\vec{\\beta}_c)}{Z}x_{nl} \n",
+    "        = \n",
+    "        -\\pi_c(\\vec{x}_n)x_{nl} \\\\\n",
+    "    &\\rightarrow\\, II \n",
+    "        = \n",
+    "        \\frac{\\partial}{\\partial \\beta_{cl}}\\left[ \\vec{x}_n\\cdot\\vec{\\beta}_k \\right] + I \n",
+    "        = \n",
+    "        x_{nl}\\delta_{ck} - \\pi_c(\\vec{x}_n)x_{nl}\n",
+    "\\end{align*}\n",
+    "\n",
+    "And finally, substituting in equation 4:\n",
+    "\\begin{align*}\n",
+    "    \\frac{\\partial l(B)}{\\partial \\beta_{cl}} \n",
+    "    &= \\sum_{n=1}^N \n",
+    "    \\left[ \n",
+    "        \\delta(K, y_n)\n",
+    "        \\left[ \n",
+    "            -\\pi_c(\\vec{x}_n)x_{nl} \n",
+    "        \\right] \n",
+    "        + \n",
+    "        \\sum_{k=1}^{K-1} \\delta(k, y_n)\n",
+    "        \\left[ \n",
+    "            x_{nl}\\delta_{ck} - \\pi_c(\\vec{x}_n)x_{nl}\n",
+    "        \\right]\n",
+    "    \\right]\\\\\n",
+    "    &= \\sum_{n=1}^N \n",
+    "    \\left[ \n",
+    "        \\sum_{k=1}^{K-1}\n",
+    "        \\left[ \n",
+    "            \\delta(k, y_n) x_{nl} \\delta_{ck}\n",
+    "        \\right]\n",
+    "        + \n",
+    "        \\sum_{k=1}^{K}\n",
+    "        \\left[ \n",
+    "            \\delta(k, y_n) \\pi_c(\\vec{x}_n) x_{nl}\n",
+    "        \\right]\n",
+    "    \\right]\\\\\n",
+    "    &= \\sum_{n=1}^{N}\n",
+    "    \\left[\n",
+    "        \\delta(c,y_n)x_{nl} - \\pi_k(\\vec{x}_n)x_{nl}\n",
+    "    \\right],\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d8c90e1",
+   "metadata": {},
+   "source": [
+    "finally obtaining:\n",
+    "\\begin{equation}\n",
+    "    \\frac{\\partial l(B)}{\\partial \\beta_{cl}} \n",
+    "    =\n",
+    "    \\sum_{n=1}^{N}\n",
+    "    \\left[\\delta(c,y_n) - \\pi_k(\\vec{x}_n)\\right] x_{nl}.\n",
+    "    \\tag{5}\n",
+    "\\end{equation}\n",
+    "\n",
+    "However, the same expression multiplied by a constant leads to the same optimal coefficients — because we are solving $\\partial l(B)/\\partial \\beta_{cl}=0$. So the equation (5) can be turned into a mean value for every case:\n",
+    "\\begin{equation}\n",
+    "    \\frac{\\partial l(B)}{\\partial \\beta_{cl}} \n",
+    "    =\n",
+    "    \\frac{1}{N}\n",
+    "    \\sum_{n=1}^{N}\n",
+    "    \\left[\\delta(c,y_n) - \\pi_k(\\vec{x}_n)\\right] x_{nl}.\n",
+    "    \\tag{6}\n",
+    "\\end{equation}"
    ]
   },
   {
