summary for Multinomial Logistic Regression

--- a/logistic-regression.ipynb
+++ b/logistic-regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "id": "0ba1d7ef",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "id": "78b882bd",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "id": "c8acb91e",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
        "4       0   0  0.007210"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "id": "930fc3c5",
    "metadata": {},
    "outputs": [],
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "id": "c20874a1",
    "metadata": {},
    "outputs": [
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "id": "877ff9a9",
    "metadata": {},
    "outputs": [
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 9,
    "id": "5c572878",
    "metadata": {},
    "outputs": [
@@ -991,7 +991,7 @@
        "4   2  0.705522"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 67,
    "id": "916700b2",
    "metadata": {},
    "outputs": [],
@@ -1140,12 +1140,94 @@
     "\n",
     "    def predict(self, X: np.array):\n",
     "        probs = self.predicted_probabilities(X) # shape N x K\n",
-    "        return np.argmax(probs, axis=1)"
+    "        return np.argmax(probs, axis=1)\n",
+    "    \n",
+    "    # Show results\n",
+    "    def plot(self, X: np.array, y: np.array):\n",
+    "        fig, axs = plt.subplots(nrows=1, ncols=2, figsize=(12,5))\n",
+    "\n",
+    "        # Predicted vs actual\n",
+    "        axs[0].scatter(self.pred, self.y, alpha=0.6)\n",
+    "        axs[0].plot(\n",
+    "            [self.y.min(), self.y.max()],\n",
+    "            [self.y.min(), self.y.max()],\n",
+    "            color='red', linestyle='--',\n",
+    "            label = 'Ideal Fit'\n",
+    "        )\n",
+    "\n",
+    "        axs[0].set_title('Predicted vs Actual')\n",
+    "        axs[0].set_xlabel('Predicted values')\n",
+    "        axs[0].set_ylabel('Actual Values')\n",
+    "        axs[0].legend()\n",
+    "\n",
+    "        # Plot loss curve\n",
+    "        axs[1].scatter(np.arange(stop=len(self.loss)), self.loss, alpha=0.6, s=10)\n",
+    "        axs[1].set_title('Loss Over Iterations')\n",
+    "        axs[1].set_xlabel('Iteration')\n",
+    "        axs[1].set_ylabel('Loss')\n",
+    "\n",
+    "        # Plot\n",
+    "        plt.tight_layout()\n",
+    "        plt.show()\n",
+    "\n",
+    "    def summary(self, X: np.array, y: np.array):\n",
+    "        pred = self.predict(X) # predictions\n",
+    "        K = len(np.unique(y)) # Number of unique categories\n",
+    "\n",
+    "        # Confusion matrix\n",
+    "        conf = np.zeros(shape=(K,K), dtype=int)\n",
+    "\n",
+    "        for r,p in zip(y,pred):\n",
+    "            conf[r, p] += 1\n",
+    "        \n",
+    "        print(\"--- Confusion Matrix ---\\nreal (rows) \\ predicted (columns)\")\n",
+    "        display(conf)\n",
+    "\n",
+    "        # Number of cases of each REAL category\n",
+    "        sums_real = np.sum(conf, axis=1) # sum by row\n",
+    "\n",
+    "        # Number of cases of each PREDICTED category\n",
+    "        sums_pred = np.sum(conf, axis=0) # sum by column\n",
+    "\n",
+    "        # Number of cases\n",
+    "        N = np.sum(sums_real)\n",
+    "        \n",
+    "        # Accuracy for all classes (correct cases over number of cases)\n",
+    "        accuracy = np.trace(conf) / N\n",
+    "\n",
+    "        # Metrics per class\n",
+    "        precision = np.zeros(shape=(K))\n",
+    "        recall = np.zeros(shape=(K))\n",
+    "        f1score = np.zeros(shape=(K))\n",
+    "\n",
+    "        for idx in range(K):\n",
+    "            # True Positives\n",
+    "            TP = conf[idx, idx]\n",
+    "\n",
+    "            # Precision = TP / (TP + FP)\n",
+    "            # Recall = TP / (TP + FN)\n",
+    "            # F1Score: armonic mean of precision and recall\n",
+    "            precision[idx] = TP / sums_real[idx] if sums_real[idx] else 0.0\n",
+    "            recall[idx] = TP / sums_pred[idx] if sums_pred[idx] else 0.0\n",
+    "            f1score[idx] = 2 * precision[idx] * recall[idx] / (precision[idx] + recall[idx]) if (precision[idx] + recall[idx]) else 0.0\n",
+    "        \n",
+    "        # Show metrics\n",
+    "        print(\"--- Performance by class ---\")\n",
+    "        print(f'Class:\\t\\t {[k for k in range(K)]}')\n",
+    "        print(f'Precision:\\t {precision}')\n",
+    "        print(f'Recall:\\t\\t {recall}')\n",
+    "        print(f'F1-Score:\\t {f1score}')\n",
+    "\n",
+    "        print(\"--- Global Model Performance (Average) ---\")\n",
+    "        print(f'Accuracy:\\t {accuracy}')\n",
+    "        print(f'Precision:\\t {np.mean(precision)}')\n",
+    "        print(f'Recall:\\t\\t {np.mean(recall)}')\n",
+    "        print(f'F1-Score:\\t {np.mean(f1score)}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 68,
    "id": "11524988",
    "metadata": {},
    "outputs": [
@@ -1153,18 +1235,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5000 / 5000\n"
+      "Correct Predictions: 3007 / 5000\n"
      ]
     }
    ],
    "source": [
-    "multinomial = multinomial_logistic_regression(iterations=5000)\n",
+    "multinomial = multinomial_logistic_regression(iterations=1000)\n",
     "multinomial.fit(X = X.values, y = y)\n",
     "pred = multinomial.predict(X)\n",
     "\n",
     "# Accuracy\n",
     "corrects = [1 if p == real else 0 for p,real in zip(pred, y)]\n",
-    "print(f\"{np.sum(corrects)} / {len(y)}\")"
+    "print(f\"Correct Predictions: {np.sum(corrects)} / {len(y)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "75dc5cf0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Confusion Matrix ---\n",
+      "real (rows) \\ predicted (columns)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 942,    0,    0,    0,    0],\n",
+       "       [   0, 1069,    0,    0,    0],\n",
+       "       [   0,  538,    0,    0,  457],\n",
+       "       [   0,    0,    0,    0,  998],\n",
+       "       [   0,    0,    0,    0,  996]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Performance by class ---\n",
+      "Class:\t\t [0, 1, 2, 3, 4]\n",
+      "Precision:\t [1. 1. 0. 0. 1.]\n",
+      "Recall:\t\t [1.         0.66521469 0.         0.         0.40636475]\n",
+      "F1-Score:\t [1.         0.79895366 0.         0.         0.57789382]\n",
+      "--- Global Model Performance (Average) ---\n",
+      "Accuracy:\t 0.6014\n",
+      "Precision:\t 0.6\n",
+      "Recall:\t\t 0.41431588696637034\n",
+      "F1-Score:\t 0.4753694965792052\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Performance\n",
+    "multinomial.summary(X, y)"
    ]
   }
  ],
